--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@radix-ui/react-toggle": "^1.1.10",
         "@radix-ui/react-toggle-group": "^1.1.11",
         "@radix-ui/react-tooltip": "^1.2.8",
+        "@react-three/fiber": "^9.3.0",
         "@tailwindcss/vite": "^4.1.11",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
@@ -64,10 +65,13 @@
         "date-fns": "^4.1.0",
         "embla-carousel-react": "^8.6.0",
         "globals": "^15.14.0",
+        "gsap": "^3.13.0",
         "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0",
         "lodash": "^4.17.21",
         "lucide-react": "^0.475.0",
+        "mathjs": "^14.7.0",
+        "motion": "^12.23.16",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-day-picker": "^9.9.0",
@@ -79,9 +83,11 @@
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
+        "three": "^0.180.0",
         "typescript": "^5.7.2",
         "vaul": "^1.1.2",
         "vite": "^7.0.4",
+        "ziggy-js": "^2.6.0",
         "zod": "^4.1.6"
     },
     "optionalDependencies": {
