--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-react": "^11.0.0",
         "@headlessui/react": "^2.2.0",
         "@hookform/resolvers": "^5.2.1",
         "@inertiajs/react": "^2.1.0",
@@ -58,6 +59,7 @@
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.6.0",
+        "ckeditor5": "^47.2.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
